--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,8 +20,5 @@
     "peerjs": "^1.3.1",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
   }
 }
